# log-alarm-platform

./: .gitattributes  .gitignore  1-install-unsloth.sh  README.md
log-analyzer-via-llm/: README.md  chat-template-analyzer.py  interview_qa_v2.md  main.py  nice_dataset.jsonl  prepare_chatml_finetune_dataset.py  pyproject.toml  train.py
log-analyzer-via-llm/data/: convert_message_to_content.py  ffmpeg_results.json  final_dataset.jsonl  final_dataset.report.json
log-analyzer-via-llm/fine-tuning-project1-v2-260109/: README.md  TODO.md  vllm_service_v3_async_send_feishu.py  vllm_starter.py
log-analyzer-via-llm/fine-tuning-project1-v2-260109/cpu-and-gpu/cuda_add/: Makefile  cpu.cpp  gpu1.cu  gpu2.cu  gpu3.cu  gpu4.cu
log-analyzer-via-llm/fine-tuning-project1-v2-260109/cpu-and-gpu/gpu-taste/: Makefile  fib_cpu.c  fib_gpu.cu
log-analyzer-via-llm/finetuned_lora/: README.md  adapter_config.json  adapter_model.safetensors  chat_template.jinja
log-analyzer-vllm-service/: 1-launch-vllm-with-finetuned-lora.sh  2-validation-finetuned-result.sh  3-benchmark-vllm-performance.sh  4-benchmark-fastapi-performance.sh  5-final-vllmService-launch-fastapi-service.sh  5-launch-fastapi-service.sh  5-sh_5-launch-fastapi-service.sh  6-validation-fastapi-service.sh  7-benchmark-fastapi-sync.sh  README.md  fastapi-101.py  feishu-101.py  main.py  pyproject.toml  run_sh-5_vllm_service.py  vllm-101.py  vllm-service.py  vllm_service_v3_async_send_feishu.py
log-analyzer-vllm-service/Dual-Process_architecture/: 1-launch-vllm-inference.sh  2-launch-business_service_fastapi.sh  3-start-all.sh  (+5 more)
